--- a/src/example.env
+++ b/src/example.env
@@ -1,2 +1,2 @@
-SALAD_ANTIFORGERY='antiforgery'
-SALAD_AUTHENTICATION='auth'
+SALAD_ANTIFORGERY='Your antiforgery code here!'
+SALAD_AUTHENTICATION='Your authentication code here!'
